--- a/index.html
+++ b/index.html
@@ -1,12 +1,216 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
-
-  </body>
+	<head>
+		<meta charset="utf_8">
+		<title>HTML Academy: Глейси</title>
+	</head>
+	<body>
+		<div class="wrapper">
+			<header class="main_header">
+				<div class="header_container">
+					<div class="right_item_container">
+						<div class="right_item">
+							<div class="search_block">
+								<a class="search" href="#"><img src="http://placehold.it/150x100" alt="Поиск"></a>
+							</div>
+							<div class="user_block">
+								<a class="login" href="#"><img src="http://placehold.it/150x100" alt="Вход">Вход</a>
+							</div>
+							<div class="basket_block">
+								<a class="basket" href="#"><img src="http://placehold.it/150x100" alt="Корзина">Пусто</a>
+							</div>
+						</div>
+						<div class="graph_phone">
+							С 10 до 20, ежедневно<br>
+							<span>8 812 450-25-25</span>
+						</div>
+					</div>
+					<div class="logo">
+						<img src="http://placehold.it/150x100" alt="Логотип">
+					</div>
+					<nav class="main_navigation">
+						<ul>
+							<li>
+								<a href="#">Каталог</a>
+							</li>
+							<li>
+								<a href="#">Доставка и оплата</a>
+							</li>
+							<li>
+								<a href="#">О Компании</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</header>
+			<main class="main_container">
+				<div class="container">
+					<div class="slide_container">
+						<div class="ice_cream_slide">
+							<img src="" alt="ice_cream">
+							<img src="" alt="ice_cream">	
+						</div>
+						<div class="text_slide">
+							<span>Крем-брюле и пломбир с малиновым джемом</span>
+						</div>
+						<div>
+							<a href="#">1</a>
+							<a href="#">2</a>
+							<a href="#">3</a>
+						</div>
+						<button type="submit">Давайте оба!</button>
+					</div>
+					<div class="free_container">
+						<div class="blok_free_container">
+							<div class="raspberry_chocolate">
+								<img src="" alt="raspberry">
+							</div>
+							<h2>Малинка даром!</h2>
+							<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+							<button class="btn" type="submit">Хочу варенье!</button>
+						</div>
+						<div class="blok_free_container">
+							<div class="raspberry_chocolate">
+								<img src="" alt="chocolate">
+							</div>
+							<h2>Шоколадки даром!</h2>
+							<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+							<button class="btn" type="submit">Хочу шоколадки!</button>
+						</div>
+					</div>
+					<div class="catolog_hit">
+						<div class="catalog_item">
+							<div class="hit">
+								<img src="" alt="hit">
+							</div>
+							<div class="catalog_preview">
+								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1.png" alt="Ice_cream" width="267" height="267">
+								<span class="catalog_price">310₽/кг</span>
+							</div>
+							<a class="catalog_title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+						</div>
+						<div class="catalog_item">
+							<div class="hit">
+								<img src="" alt="hit">
+							</div>
+							<div class="catalog_preview">
+								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/3.png" alt="Ice_cream" width="267" height="267">
+								<span class="catalog_price">355₽/кг</span>
+							</div>
+							<a class="catalog_title" href="#">Сливочно-кофейное с кусочками шоколада</a>
+						</div>
+						<div class="catalog_item">
+							<div class="hit">
+								<img src="" alt="hit">
+							</div>
+							<div class="catalog_preview">
+								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2.png" alt="Ice_cream" width="267" height="267">
+								<span class="catalog_price">380₽/кг</span>
+							</div>
+							<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+						</div>
+						<div class="catalog_item">
+							<div class="hit">
+								<img src="" alt="hit">
+							</div>
+							<div class="catalog_preview">
+								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/4.png" alt="Ice_cream" width="267" height="267">
+								<span class="catalog_price">415₽/кг</span>
+							</div>
+							<a class="catalog_title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
+						</div>
+					</div>
+					<div class="about_company">
+						<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
+						<div class="left_img">
+							<img src="" alt="left_img">
+						</div>
+						<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+						<div class="left_img">
+							<img src="" alt="left_img">
+						</div>
+						<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
+						<div class="right_img">
+							<img src="" alt="right_img">
+						</div>
+						<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+						<div class="right_img">
+							<img src="" alt="right_img">
+						</div>
+						<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
+					</div>
+					<div class="news">
+						<div class="news_img">
+							<img src="" alt="news_img">
+						</div>
+						<span>Новое в нашем блоге</span>
+						<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
+					</div>
+					<div class="delivery"> 
+						<div class="delivery_img">
+							<img src="" alt="delivery_img">
+						</div>
+						<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+						<form action="" method="post">
+							<input type="text" name="email" placeholder="Электронная почта">
+							<button class="btn" type="submit">Отправить</button>
+						</form>
+					</div>
+					<div class="map">
+						<div class="index-content-right">
+							<div class="white_block">
+								<img src="" alt="white_block">
+							</div>
+							<p>
+								Адрес главного офиса и<br> 
+								офлайн магазина:
+								<span>ул. Большая Конюшенная 19/8,<br>
+								Санкт-Петербург</span>
+							</p>
+							<p>
+								Для заказов по телефону:<br>
+								<span>8 812 450-25-25</span><br>
+								(с 10 до 20 ежедневно)
+							</p>
+							<a class="btn" href="#">Форма обратной связи</a>
+						</div>
+					</div>
+				</div>
+			</main>
+			<footer>
+				<div class="container">
+					<div class="footer_social">
+						<section class="footer_social">
+							<a class="social_btn social_btn_tvit" href="#">Твитер</a>
+							<a class="social_btn social_btn_inst" href="#">Инстаграм</a>
+							<a class="social_btn social_btn_fb" href="#">Фейсбук</a>
+							<a class="social_btn social_btn_vk" href="#">Вконтакте</a>			
+						</section>
+					</div>
+					<div class="footer_center">
+						<ul>
+							<li>
+								<a href="#"><img src="http://placehold.it/150x100" alt="heart">Для поставщиков</a>
+							</li>
+							<li>
+								<a href="#">О производстве</a>
+							</li>
+							<li>
+								<a href="#">Наши документы</a>
+							</li>
+							<li>
+								<a href="#">Экологические стандарты</a>
+							</li>
+						</ul>
+					</div>
+					<div>	
+						<div class="logo_htmlacademy">
+							<img src="" alt="logo_htmlacademy">
+						</div>
+						<span class="htmlacademy">Сделано в HTML Academy © 2016</span>
+					</div>
+				</div>
+			</footer>
+		</div>
+	</body>
 </html>
