--- a/catalog.html
+++ b/catalog.html
@@ -10,13 +10,13 @@
 				<div class="right_item_container">
 					<div class="right_item">
 						<div class="search_block">
-							<a class="search" href="#"><img src="http://placehold.it/150x100" alt="Поиск"></a>
+							<a class="search" href="#"><img src="http://placehold.it/15x10" alt="Поиск"></a>
 						</div>
 						<div class="user_block">
-							<a class="login" href="#"><img src="http://placehold.it/150x100" alt="Вход">Вход</a>
+							<a class="login" href="#"><img src="http://placehold.it/15x10" alt="Вход">Вход</a>
 						</div>
 						<div class="basket_block">
-							<a class="basket" href="#"><img src="http://placehold.it/150x100" alt="Корзина">Пусто</a>
+							<a class="basket" href="#"><img src="http://placehold.it/15x10" alt="Корзина">Пусто</a>
 						</div>
 					</div>
 					<div class="graph_phone">
@@ -24,9 +24,9 @@
 						<span>8 812 450-25-25</span>
 					</div>
 				</div>
-				<div class="logo">
-					<img src="http://placehold.it/150x100" alt="Логотип">
-				</div>
+				<a href="#">
+					<img src="http://placehold.it/15x10" alt="Логотип">
+				</a>
 				<nav class="main_navigation">
 					<ul>
 						<li>
@@ -63,10 +63,10 @@
 					</div>
 					<div class="range_filter">
 						<div class="price_controls">
-							Цена:<input class="min_price" type="text" value="100">
-							руб.-<input class="max_price" type="text" value="500">руб.
+							<span>Цена: 100 руб. – 500 руб.</span>
 						</div>
 						<div class="range_controls">
+							<div class="scale"><div class="bar"></div></div>
 							<div class="toggle min_toggle"></div>
 							<div class="toggle max_toggle"></div>
 						</div>
@@ -89,8 +89,6 @@
 							<input type="radio" name="fatness" id=">30%">
 							<label for=">30%">выше 30%</label>
 						</div>
-					</form>
-					<form class="filler" action="https://echo.htmlacademy.ru" method="post">
 						Наполнители:
 						<div class="fatness">
 							<input type="checkbox" name="fatness" id="chocolate" checked>
@@ -118,7 +116,7 @@
 				<div class="catalog_container">
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1.png" alt="Ice_cream" width="267" height="267">
 							<span class="catalog_price">310₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -128,7 +126,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2.png" alt="Ice_cream" width="267" height="267">
 							<span class="catalog_price">380₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -161,7 +159,7 @@
 							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1-2.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">325₽/кг</span>
 						</div>
-						<a class="catalog_title" href="#">Cливочное с брусничным джемомCливочное с брусничным джемомCливочное с брусничным джемом</a>
+						<a class="catalog_title" href="#">Cливочное с брусничным джемом</a>
 						<div class="additional">
 							<a class="btn" href="#">Быстрый просмотр</a>
 						</div>
@@ -258,7 +256,7 @@
 				<div class="footer_center">
 					<ul>
 						<li>
-							<a href="#"><img src="http://placehold.it/150x100" alt="heart">Для поставщиков</a>
+							<a href="#"><img src="http://placehold.it/15x10" alt="heart">Для поставщиков</a>
 						</li>
 						<li>
 							<a href="#">О производстве</a>
