--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
+		<input class="hide" type="radio" name="ground_color" id="green_1">
+		<input class="hide" type="radio" name="ground_color" id="violet_2">
+		<input class="hide" type="radio" name="ground_color" id="brown_3">
 		<div class="wrapper">
 			<header class="main_header">
 				<div class="header_container">
 					<div class="right_item_container">
 						<div class="right_item">
 							<div class="search_block">
-								<a class="search" href="#"><img src="http://placehold.it/150x100" alt="Поиск"></a>
+								<a class="search" href="#"><img src="http://placehold.it/15x10" alt="Поиск"></a>
 							</div>
 							<div class="user_block">
-								<a class="login" href="#"><img src="http://placehold.it/150x100" alt="Вход">Вход</a>
+								<a class="login" href="#"><img src="http://placehold.it/15x10" alt="Вход">Вход</a>
 							</div>
 							<div class="basket_block">
-								<a class="basket" href="#"><img src="http://placehold.it/150x100" alt="Корзина">Пусто</a>
+								<a class="basket" href="#"><img src="http://placehold.it/15x10" alt="Корзина">Пусто</a>
 							</div>
 						</div>
 						<div class="graph_phone">
@@ -26,7 +29,7 @@
 						</div>
 					</div>
 					<div class="logo">
-						<img src="http://placehold.it/150x100" alt="Логотип">
+						<img src="http://placehold.it/15x10" alt="Логотип">
 					</div>
 					<nav class="main_navigation">
 						<ul>
@@ -45,37 +48,32 @@
 			</header>
 			<main class="main_container">
 				<div class="container">
-					<div class="slide_container">
-						<div class="ice_cream_slide">
-							<img src="" alt="ice_cream">
-							<img src="" alt="ice_cream">	
-						</div>
-						<div class="text_slide">
-							<span>Крем-брюле и пломбир с малиновым джемом</span>
+					<div class="main_slide">
+						<div class="slide">
+							<div class="ice_cream_slide">
+								<img src="" alt="ice_cream">	
+							</div>
+							<div class="text_slide">
+								<span>Крем-брюле и пломбир с малиновым джемом</span>
+							</div>
 						</div>
 						<div>
-							<a href="#">1</a>
-							<a href="#">2</a>
-							<a href="#">3</a>
+							<label for="green_1">1</label>
+							<label for="violet_2">2</label>
+							<label for="brown_3">3</label>
 						</div>
-						<button type="submit">Давайте оба!</button>
+						<a class="btn" href="#">Давайте оба!</a>
 					</div>
 					<div class="free_container">
-						<div class="blok_free_container">
-							<div class="raspberry_chocolate">
-								<img src="" alt="raspberry">
-							</div>
+						<div class="raspberry">
 							<h2>Малинка даром!</h2>
 							<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-							<button class="btn" type="submit">Хочу варенье!</button>
+							<a class="btn" href="#">Хочу варенье!</a>
 						</div>
-						<div class="blok_free_container">
-							<div class="raspberry_chocolate">
-								<img src="" alt="chocolate">
-							</div>
+						<div class="chocolate">
 							<h2>Шоколадки даром!</h2>
 							<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-							<button class="btn" type="submit">Хочу шоколадки!</button>
+							<a class="btn" href="#">Хочу шоколадки!</a>
 						</div>
 					</div>
 					<div class="catolog_hit">
@@ -88,6 +86,9 @@
 								<span class="catalog_price">310₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+							<div class="additional">
+								<a class="btn" href="#">Быстрый просмотр</a>
+							</div>
 						</div>
 						<div class="catalog_item">
 							<div class="hit">
@@ -98,6 +99,9 @@
 								<span class="catalog_price">355₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочно-кофейное с кусочками шоколада</a>
+							<div class="additional">
+								<a class="btn" href="#">Быстрый просмотр</a>
+							</div>
 						</div>
 						<div class="catalog_item">
 							<div class="hit">
@@ -108,6 +112,9 @@
 								<span class="catalog_price">380₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+							<div class="additional">
+								<a class="btn" href="#">Быстрый просмотр</a>
+							</div>
 						</div>
 						<div class="catalog_item">
 							<div class="hit">
@@ -118,26 +125,29 @@
 								<span class="catalog_price">415₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
+							<div class="additional">
+								<a class="btn" href="#">Быстрый просмотр</a>
+							</div>
 						</div>
 					</div>
 					<div class="about_company">
 						<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
-						<div class="left_img">
-							<img src="" alt="left_img">
+						<div class="mini_ice_cream">
+							<img src="" alt="mini_ice_cream">
+							<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
 						</div>
-						<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-						<div class="left_img">
-							<img src="" alt="left_img">
+						<div class="leaflet">
+							<img src="" alt="leaflet">
+							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
 						</div>
-						<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
-						<div class="right_img">
-							<img src="" alt="right_img">
+						<div class="cow">
+							<img src="" alt="cow">
+							<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+						</div>	
+						<div class="thermometer">
+							<img src="" alt="thermometer">
+							<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
 						</div>
-						<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-						<div class="right_img">
-							<img src="" alt="right_img">
-						</div>
-						<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
 					</div>
 					<div class="news">
 						<div class="news_img">
@@ -146,15 +156,21 @@
 						<span>Новое в нашем блоге</span>
 						<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
 					</div>
-					<div class="delivery"> 
-						<div class="delivery_img">
-							<img src="" alt="delivery_img">
+					<div class="news_delivery">
+						<div class="news">
+							<div class="news_img">
+								<img src="" alt="news_img">
+							</div>
+							<span>Новое в нашем блоге</span>
+							<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
+							</div>
+							<div class="delivery"> 
+								<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+							<form action="" method="post">
+								<input type="text" name="email" placeholder="Электронная почта">
+								<button class="btn" type="submit">Отправить</button>
+							</form>
 						</div>
-						<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
-						<form action="" method="post">
-							<input type="text" name="email" placeholder="Электронная почта">
-							<button class="btn" type="submit">Отправить</button>
-						</form>
 					</div>
 					<div class="map">
 						<div class="index-content-right">
@@ -190,7 +206,7 @@
 					<div class="footer_center">
 						<ul>
 							<li>
-								<a href="#"><img src="http://placehold.it/150x100" alt="heart">Для поставщиков</a>
+								<a href="#"><img src="http://placehold.it/15x10" alt="heart">Для поставщиков</a>
 							</li>
 							<li>
 								<a href="#">О производстве</a>
