--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-		<meta charset="utf_8">
+		<meta charset="utf-8">
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
@@ -54,7 +54,14 @@
 								<img src="" alt="ice_cream">	
 							</div>
 							<div class="text_slide">
-								<span>Крем-брюле и пломбир с малиновым джемом</span>
+								<span class="green_1">Крем-брюле и пломбир с малиновым джемом</span>
+								<span class="violet_2">Шоколадный пломбир и лимонный сорбет</span>
+								<span class="brown_3">Пломбир с помадкой и клубничный щербет</span>
+							</div>
+							<div class="button_slide">
+								<a class="btn button_1" href="#">Давайте оба!</a>
+								<a class="btn button_2" href="#">Давайте оба!</a>
+								<a class="btn button_3" href="#">Давайте оба!</a>
 							</div>
 						</div>
 						<div>
@@ -62,15 +69,14 @@
 							<label for="violet_2">2</label>
 							<label for="brown_3">3</label>
 						</div>
-						<a class="btn" href="#">Давайте оба!</a>
 					</div>
 					<div class="free_container">
-						<div class="raspberry">
+						<div class="raspberry block_free">
 							<h2>Малинка даром!</h2>
 							<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
 							<a class="btn" href="#">Хочу варенье!</a>
 						</div>
-						<div class="chocolate">
+						<div class="chocolate block_free">
 							<h2>Шоколадки даром!</h2>
 							<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
 							<a class="btn" href="#">Хочу шоколадки!</a>
@@ -78,10 +84,7 @@
 					</div>
 					<div class="catolog_hit">
 						<div class="catalog_item">
-							<div class="hit">
-								<img src="" alt="hit">
-							</div>
-							<div class="catalog_preview">
+							<div class="catalog_preview hit">
 								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">310₽/кг</span>
 							</div>
@@ -91,10 +94,7 @@
 							</div>
 						</div>
 						<div class="catalog_item">
-							<div class="hit">
-								<img src="" alt="hit">
-							</div>
-							<div class="catalog_preview">
+							<div class="catalog_preview hit">
 								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/3.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">355₽/кг</span>
 							</div>
@@ -104,10 +104,7 @@
 							</div>
 						</div>
 						<div class="catalog_item">
-							<div class="hit">
-								<img src="" alt="hit">
-							</div>
-							<div class="catalog_preview">
+							<div class="catalog_preview hit">
 								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">380₽/кг</span>
 							</div>
@@ -117,10 +114,7 @@
 							</div>
 						</div>
 						<div class="catalog_item">
-							<div class="hit">
-								<img src="" alt="hit">
-							</div>
-							<div class="catalog_preview">
+							<div class="catalog_preview hit">
 								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/4.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">415₽/кг</span>
 							</div>
@@ -133,28 +127,21 @@
 					<div class="about_company">
 						<h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
 						<div class="mini_ice_cream">
-							<img src="" alt="mini_ice_cream">
+							<img src="" alt="mini_ice_cream block_company">
 							<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
 						</div>
 						<div class="leaflet">
-							<img src="" alt="leaflet">
+							<img src="" alt="leaflet block_company">
 							<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
 						</div>
 						<div class="cow">
-							<img src="" alt="cow">
+							<img src="" alt="cow block_company">
 							<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 						</div>	
 						<div class="thermometer">
-							<img src="" alt="thermometer">
+							<img src="" alt="thermometer block_company">
 							<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
 						</div>
-					</div>
-					<div class="news">
-						<div class="news_img">
-							<img src="" alt="news_img">
-						</div>
-						<span>Новое в нашем блоге</span>
-						<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
 					</div>
 					<div class="news_delivery">
 						<div class="news">
@@ -164,8 +151,8 @@
 							<span>Новое в нашем блоге</span>
 							<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
 							</div>
-							<div class="delivery"> 
-								<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+						<div class="delivery"> 
+							<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
 							<form action="" method="post">
 								<input type="text" name="email" placeholder="Электронная почта">
 								<button class="btn" type="submit">Отправить</button>
@@ -173,7 +160,7 @@
 						</div>
 					</div>
 					<div class="map">
-						<div class="index-content-right">
+						<div class="index_content_right">
 							<div class="white_block">
 								<img src="" alt="white_block">
 							</div>
