--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
+		<link href="css/style.css" rel="stylesheet">
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
@@ -125,7 +126,7 @@
 				<div class="catalog_container">
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1.png" alt="Ice_cream" width="267" height="267">
+							<img class="ice_cream" src="img/1.png" alt="Ice_cream" width="267" height="267">
 							<span class="catalog_price">310₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -135,18 +136,8 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2.png" alt="Ice_cream" width="267" height="267">
+							<img class="ice_cream" src="img/2.png" alt="Ice_cream" width="267" height="267">
 							<span class="catalog_price">380₽/кг</span>
-						</div>
-						<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-						<div class="additional">
-							<a class="btn" href="#">Быстрый просмотр</a>
-						</div>
-					</div>
-					<div class="catalog_item">
-						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/3.png" alt="Ice-cream" width="267" height="267">
-							<span class="catalog_price">355₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочно-кофейное с кусочками шоколада</a>
 						<div class="additional">
@@ -155,7 +146,17 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/4.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="img/3.png" alt="Ice-cream" width="267" height="267">
+							<span class="catalog_price">355₽/кг</span>
+						</div>
+						<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+						<div class="additional">
+							<a class="btn" href="#">Быстрый просмотр</a>
+						</div>
+					</div>
+					<div class="catalog_item">
+						<div class="catalog_preview">
+							<img class="ice_cream" src="img/4.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">415 ₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -165,7 +166,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1-2.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="img/1_2.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">325₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Cливочное с брусничным джемом</a>
@@ -175,7 +176,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2-1.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="img/2_2.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">410₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Cливочно-черничное с цельными ягодами черники </a>
@@ -185,7 +186,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/3-1.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="img/3_2.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">375₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочно-лимонное с карамельной присыпкой</a>
@@ -195,7 +196,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/4-1.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="img/4_2.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">320₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочное с шоколадной стружкой</a>
@@ -205,7 +206,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice-cream" src="https://dl.dropboxusercontent.com/u/26180056/1-1.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice-cream" src="img/1_3.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">440₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочно-ванильное с кусочками шоколада</a>
@@ -215,7 +216,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2-2.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="img/2_3.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">435₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочноe с ментоловым сиропом</a>
@@ -225,7 +226,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/3-2.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice_cream" src="img/3_3.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">355₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочное с кусочками черного шоколада</a>
@@ -235,7 +236,7 @@
 					</div>
 					<div class="catalog_item">
 						<div class="catalog_preview">
-							<img class="ice-cream" src="https://dl.dropboxusercontent.com/u/26180056/4-2.png" alt="Ice-cream" width="267" height="267">
+							<img class="ice-cream" src="img/4_3.png" alt="Ice-cream" width="267" height="267">
 							<span class="catalog_price">420₽/кг</span>
 						</div>
 						<a class="catalog_title" href="#">Сливочное с мятным сиропом</a>
