--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
+		<link href="css/style.css" rel="stylesheet">
 		<title>HTML Academy: Глейси</title>
 	</head>
 	<body>
@@ -29,7 +30,7 @@
 						</div>
 					</div>
 					<div class="logo">
-						<img src="http://placehold.it/15x10" alt="Логотип">
+						<img src="img/logo.svg" alt="Логотип">
 					</div>
 					<nav class="main_navigation">
 						<ul>
@@ -51,7 +52,9 @@
 					<div class="main_slide">
 						<div class="slide">
 							<div class="ice_cream_slide">
-								<img src="" alt="ice_cream">	
+								<img src="img/ice_cream1.png" alt="ice_cream">
+								<img src="img/ice_cream2.png" alt="ice_cream">
+								<img src="img/ice_cream3.png" alt="ice_cream">	
 							</div>
 							<div class="text_slide">
 								<span class="green_1">Крем-брюле и пломбир с малиновым джемом</span>
@@ -85,7 +88,7 @@
 					<div class="catolog_hit">
 						<div class="catalog_item">
 							<div class="catalog_preview hit">
-								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/1.png" alt="Ice_cream" width="267" height="267">
+								<img class="ice_cream" src="img/1.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">310₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -95,7 +98,7 @@
 						</div>
 						<div class="catalog_item">
 							<div class="catalog_preview hit">
-								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/3.png" alt="Ice_cream" width="267" height="267">
+								<img class="ice_cream" src="img/2.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">355₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -105,7 +108,7 @@
 						</div>
 						<div class="catalog_item">
 							<div class="catalog_preview hit">
-								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/2.png" alt="Ice_cream" width="267" height="267">
+								<img class="ice_cream" src="img/3.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">380₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -115,7 +118,7 @@
 						</div>
 						<div class="catalog_item">
 							<div class="catalog_preview hit">
-								<img class="ice_cream" src="https://dl.dropboxusercontent.com/u/26180056/4.png" alt="Ice_cream" width="267" height="267">
+								<img class="ice_cream" src="img/4.png" alt="Ice_cream" width="267" height="267">
 								<span class="catalog_price">415₽/кг</span>
 							</div>
 							<a class="catalog_title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
